<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/otp"
    tools:context=".Otp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/phone"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textColor="@color/white"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/otp"
        android:inputType="number"
        android:textColor="@color/white"
        android:hint="@string/enter_your_otp_code"/>

    <Button
        android:id="@+id/otp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textColor="@color/colorAccent"
        android:id="@+id/resend"/>

</LinearLayout>