<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lession"
    android:layout_height="match_parent"
    tools:context=".Home_work">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:id="@+id/tvDate"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/show_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/show" />

    <Button
        android:id="@+id/syllabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/show_work"
        android:layout_marginStart="43dp"
        android:text="Syllabus" />

    <Button
        android:id="@+id/time_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/show_work"
        android:layout_marginEnd="27dp"
        android:text="Time Table" />



    <TextView
        android:id="@+id/work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:hint="@string/home_work"
        android:textColor="@color/black" />
   <!-- <ListView
        android:id="@+id/work"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="108dp">

    </ListView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="44dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lefttable"
            android:layout_width="wrap_content"
            android:layout_height="234dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="34dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="My Text"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <ListView
                android:id="@+id/marks"
                android:layout_width="175dp"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/righttable"
            android:layout_width="234dp"
            android:layout_height="234dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/lefttable"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dairy Pics(Click to view)"
                android:textColor="@color/black"
                android:textStyle="bold" />


            <ListView
                android:id="@+id/marks_image1"
                android:layout_width="match_parent"
                android:layout_height="215dp">

            </ListView>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>