<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/school"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/school"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/lightgray" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/student_image"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:src="@drawable/profilepic" />

                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/progressbar_image"
                            android:layout_centerInParent="true" />

                    </RelativeLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/lightgray" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dp"
                                android:text="@string/name"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/father_name"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/roll_number"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Class"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Medium"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Change Student"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="30dp"
                                android:hint="@string/name"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/fname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/father_name"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/rollnum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/roll_number"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/clas"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Class"
                                android:textSize="15dp" />

                            <TextView
                                android:id="@+id/medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="Medium"
                                android:textSize="15dp" />

                            <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/yellow"
                                android:spinnerMode="dialog" />


                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>