<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundblue">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".Homee">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/school_logo"
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        android:src="@drawable/logo" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/progressbar_image"
                        android:layout_centerInParent="true" />

                </RelativeLayout>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/userschool"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"

                            android:hint="@string/school_name"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="2dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"

                            android:hint="@string/wellcome_name"
                            android:textColor="@color/cornflowerblue"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/userclass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"

                            android:hint="@string/class_name"
                            android:textColor="@color/lightpink"
                            android:textSize="18dp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>




            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">



            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:id="@+id/attendance12"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="notice"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:focusable="true"
                        android:paddingLeft="5dip"
                        android:paddingRight="5dip"
                        android:focusableInTouchMode="true"
                        android:freezesText="false"
                        android:id="@+id/textmarquee"
                        android:textColor="@color/cornflowerblue"/>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/Homework"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/home_work"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/home_work_img"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundblue"
                            android:padding="10dp"
                            android:src="@drawable/search" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Dairy"
                            android:textStyle="bold" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/attendance1"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/attendance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/attendance_img"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundblue"
                            android:padding="10dp"
                            android:src="@drawable/attendance" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/attendance"
                            android:textStyle="bold" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/gallary1"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/gallary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/home_work_img1"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundblue"
                            android:padding="10dp"
                            android:src="@drawable/gallary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="Gallary"
                            android:textStyle="bold" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--<android.support.v7.widget.CardView-->
                    <!--android:id="@+id/student_marks"-->
                    <!--android:layout_width="160dp"-->
                    <!--android:layout_height="150dp"-->
                    <!--android:layout_margin="10dp"-->
                    <!--android:clickable="true"-->
                    <!--android:foreground="?android:attr/selectableItemBackground">-->

                    <!--<LinearLayout-->
                        <!--android:id="@+id/attendance2"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:gravity="center"-->
                        <!--android:orientation="vertical">-->

                        <!--<ImageView-->
                            <!--android:id="@+id/attendance_img1"-->
                            <!--android:layout_width="64dp"-->
                            <!--android:layout_height="64dp"-->
                            <!--android:background="@drawable/cerclebackgroundblue"-->
                            <!--android:padding="10dp"-->
                            <!--android:src="@drawable/marks" />-->

                        <!--<TextView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_marginTop="5dp"-->
                            <!--android:text="Marks"-->
                            <!--android:textStyle="bold" />-->


                    <!--</LinearLayout>-->
                <!--</android.support.v7.widget.CardView>-->

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="340dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="200dp"
                            android:id="@+id/image1"
                            android:src="@drawable/schoolback" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>